--- a/Web.config
+++ b/Web.config
@@ -73,8 +73,6 @@
     </providers>
   </entityFramework>
   <connectionStrings configBuilders="Secrets">
-    <add name="DBModel" connectionString="data source= GLADIUS2\SQLEXPRESS;initial catalog=IoTApps;          
-         persist security info=True;user id= sa; password=1234;         
-         MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBModel" connectionString="data source= GLADIUS2\SQLEXPRESS;initial catalog=IoTApps;                    persist security info=True;user id= sa; password=1234;                   MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
      </connectionStrings>
 </configuration>
