--- a/IoTApps.csproj
+++ b/IoTApps.csproj
@@ -334,6 +334,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Channel\Index.cshtml" />
+    <Content Include="Views\Channel\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
